# numbat

./: README.md  format.sh  hie.yaml  numbat.cabal  stack.yaml
src/Numbat/: Nibble.hs
src/Numbat/TCP/: Packet.hs  Segment.hs
test/: Test.hs  TestUtil.hs
test/Numbat/TCP/Segment/: Tests.hs
